Added "values from subpage" feature
If you have the pages:

A
A/B
A/B/C

Then this feature will allow you to have these as values as possible
values of an input field.

example:

|values from subpage=A

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -58,6 +58,7 @@
     "sf_forminputs_valuesfromcategory": "A category whose pages should be this input's set of values",
     "sf_forminputs_valuesfromnamespace": "A namespace whose pages should be this input's set of values",
     "sf_forminputs_valuesfromconcept": "A Semantic MediaWiki \"concept\" page whose pages should be this input's set of values",
+    "sf_forminputs_valuesfromsubpage": "A MediaWiki \"subpage(s)\" of a page which would act as this input's set of values",
     "sf_forminputs_valuesfromurl": "A URL holding structured data that should be this input's set of values",
     "sf_forminputs_values": "The set of values for this input, separated by commas",
     "sf_forminputs_list": "Mark this input as holding a list of values",
